src/tests/evaluation_error/type_mismatch_boolean_prefix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_boolean_prefix_expression__test_type_mismatch_boolean_prefix_expression_case_3_syntax_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_boolean_prefix_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: MinusPrefix {
            right_hand: Boolean {
                literal: false,
            },
        },
    },
]
