src/tests/evaluation_error/type_mismatch_boolean_prefix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_boolean_prefix_expression__test_type_mismatch_boolean_prefix_expression_case_4_evaluation_error.snap
---
source: src/tests/evaluation_error/type_mismatch_boolean_prefix_expression/mod.rs
assertion_line: 26
expression: error
---
Err(
    "TypeMismatch",
)
