src/tests/evaluation_error/type_mismatch_boolean_prefix_expression/snapshots/monkey_interpreter__tests__evaluation_error__type_mismatch_boolean_prefix_expression__test_type_mismatch_boolean_prefix_expression_case_4_lexical_analysis.snap
---
source: src/tests/evaluation_error/type_mismatch_boolean_prefix_expression/mod.rs
assertion_line: 16
expression: tokens
---
[
    PositionedToken {
        token: Minus,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: False,
        position: Position {
            line: 1,
            column: 2,
        },
    },
]
